add domain status toggle
